// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Field - old API renders the correct id 1`] = `
<Form
  layout="label-on-left"
>
  <form
    data-cosmos-key="form"
    layout="label-on-left"
  >
    <Component
      label="Old API"
    >
      <Form Field
        error={null}
        helpText={null}
        label="Old API"
      >
        <styled.div
          data-cosmos-key="form.field"
          layout="label-on-left"
        >
          <div
            className="sc-fBuWsC uWCJU"
            data-cosmos-key="form.field"
          >
            <styled.div
              layout="label-on-left"
            >
              <div
                className="sc-fMiknA brUQCf"
              >
                <styled.label
                  htmlFor="old_api-2"
                >
                  <label
                    className="sc-bRBYWo hkmFYm"
                    htmlFor="old_api-2"
                  >
                    Old API
                  </label>
                </styled.label>
              </div>
            </styled.div>
            <styled.div
              layout="label-on-left"
            >
              <div
                className="sc-dVhcbM etVTlY"
              >
                <FieldInput
                  hasError={false}
                  helpText={null}
                  id="old_api-2"
                  label="Old API"
                >
                  <Component
                    type="text"
                  >
                    <Form Field
                      error={null}
                      fieldComponent={[Function]}
                      helpText={null}
                      label=""
                      type="text"
                    >
                      <styled.div
                        data-cosmos-key="form.field"
                        layout="label-on-left"
                      >
                        <div
                          className="sc-fBuWsC uWCJU"
                          data-cosmos-key="form.field"
                        >
                          <styled.div
                            layout="label-on-left"
                          >
                            <div
                              className="sc-fMiknA brUQCf"
                            >
                              <styled.label
                                htmlFor="-3"
                              >
                                <label
                                  className="sc-bRBYWo hkmFYm"
                                  htmlFor="-3"
                                />
                              </styled.label>
                            </div>
                          </styled.div>
                          <styled.div
                            layout="label-on-left"
                          >
                            <div
                              className="sc-dVhcbM etVTlY"
                            >
                              <FieldInput
                                Component={[Function]}
                                fieldComponent={[Function]}
                                hasError={false}
                                helpText={null}
                                id="-3"
                                label=""
                                type="text"
                              >
                                <TextInput
                                  actions={Array []}
                                  code={false}
                                  error={null}
                                  fieldComponent={[Function]}
                                  hasError={false}
                                  helpText={null}
                                  id="-3"
                                  label=""
                                  onChange={null}
                                  readOnly={false}
                                  size="default"
                                  type="text"
                                >
                                  <Styled(styled.input)
                                    actions={Array []}
                                    code={false}
                                    data-cosmos-key="text-input"
                                    error={null}
                                    fieldComponent={[Function]}
                                    hasError={false}
                                    helpText={null}
                                    id="-3"
                                    label=""
                                    onChange={null}
                                    readOnly={false}
                                    size="default"
                                    type="text"
                                  >
                                    <styled.input
                                      actions={Array []}
                                      className="sc-ckVGcZ dQMAUo"
                                      code={false}
                                      data-cosmos-key="text-input"
                                      error={null}
                                      fieldComponent={[Function]}
                                      hasError={false}
                                      helpText={null}
                                      id="-3"
                                      label=""
                                      onChange={null}
                                      readOnly={false}
                                      size="default"
                                      type="text"
                                    >
                                      <input
                                        className="sc-ckVGcZ dQMAUo sc-kgoBCf jZzEBr"
                                        data-cosmos-key="text-input"
                                        id="-3"
                                        label=""
                                        onChange={null}
                                        readOnly={false}
                                        size="default"
                                        type="text"
                                      />
                                    </styled.input>
                                  </Styled(styled.input)>
                                </TextInput>
                              </FieldInput>
                            </div>
                          </styled.div>
                        </div>
                      </styled.div>
                    </Form Field>
                  </Component>
                </FieldInput>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </Form Field>
    </Component>
  </form>
</Form>
`;

exports[`Form Field renders the correct id 1`] = `
<Form
  layout="label-on-left"
>
  <form
    data-cosmos-key="form"
    layout="label-on-left"
  >
    <Component
      label="Field label"
    >
      <Form Field
        error={null}
        helpText={null}
        label="Field label"
      >
        <styled.div
          data-cosmos-key="form.field"
          layout="label-on-left"
        >
          <div
            className="sc-fBuWsC uWCJU"
            data-cosmos-key="form.field"
          >
            <styled.div
              layout="label-on-left"
            >
              <div
                className="sc-fMiknA brUQCf"
              >
                <styled.label
                  htmlFor="field_label-1"
                >
                  <label
                    className="sc-bRBYWo hkmFYm"
                    htmlFor="field_label-1"
                  >
                    Field label
                  </label>
                </styled.label>
              </div>
            </styled.div>
            <styled.div
              layout="label-on-left"
            >
              <div
                className="sc-dVhcbM etVTlY"
              >
                <FieldInput
                  hasError={false}
                  helpText={null}
                  id="field_label-1"
                  label="Field label"
                >
                  <TextInput
                    actions={Array []}
                    code={false}
                    error={null}
                    onChange={null}
                    readOnly={false}
                    size="default"
                    type="text"
                  >
                    <Styled(styled.input)
                      actions={Array []}
                      code={false}
                      data-cosmos-key="text-input"
                      error={null}
                      id="field_label-1"
                      onChange={null}
                      readOnly={false}
                      size="default"
                      type="text"
                    >
                      <styled.input
                        actions={Array []}
                        className="sc-ckVGcZ dQMAUo"
                        code={false}
                        data-cosmos-key="text-input"
                        error={null}
                        id="field_label-1"
                        onChange={null}
                        readOnly={false}
                        size="default"
                        type="text"
                      >
                        <input
                          className="sc-ckVGcZ dQMAUo sc-kgoBCf jZzEBr"
                          data-cosmos-key="text-input"
                          id="field_label-1"
                          onChange={null}
                          readOnly={false}
                          size="default"
                          type="text"
                        />
                      </styled.input>
                    </Styled(styled.input)>
                  </TextInput>
                </FieldInput>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </Form Field>
    </Component>
  </form>
</Form>
`;
